Feat: full help system remake — context-aware player help, class descriptions, admin sections